Changelog
=========

2.0.1 (unreleased)
------------------

- Use browser layer for all viewlets in this package.
  [mbaechtold]

- Replace miss-used definition list markup by section/header markup in languageselector.
  [mathias.leimgruber]


2.0.0 (2015-12-04)
------------------

- Prevent traversing to a not accessible navigation root in banner and css
  viewlet.
  [mathias.leimgruber]

- Make current language and list of possible languages accessable thru browserview.
  [mathias.leimgruber]

- Add ftw.theming expression to subsite.css.
  [mathias.leimgruber]

- Remove ISubsiteLayer from subsite.logo viewlet. This allows us to register
  a more specific subsite.logo viewlet.
  [mathias.leimgruber]

- Add ftw.theming integration scss (Currently only a Icon).
  [mathias.leimgruber]

- Implement Dexterity based subsite content.
  [mathias.leimgruber]


1.4.2 (2015-02-27)
------------------

- Add ftw.publisher support for teaser portlet.
  [jone]


1.4.1 (2015-02-25)
------------------

- Fix teaserportlet migration 1001, which did not consistently migrate.
  [jone]


1.4.0 (2015-02-24)
------------------

- Fix UnicodeDecodeError while setting a title attr with umlauts.
  [mathias.leimgruber]

- Use getattr for getting the new alt text for teaser images to
  prevent us from writing a expensive upgrade step.
  [mathias.leimgruber]

- Implement alt (required for accessibility) text for teaser images.
  [kevin.bieri]


1.3.2 (2014-09-23)
------------------

- Add missing rolemap.xml (Add permission for Manager/Contributor).
  [mathias.leimgruber]

- Set a caching header for teaser portlet images.
  [deif]


1.3.1 (2014-02-10)
------------------

- Drop Plone.4.1 compatibility due to Plone-bugs  which interfere with our testsetup and were only fixed in 4.2
  (see: https://github.com/plone/Products.CMFPlone/pull/49)
  [tschanzt]

- Fix Subsitelogoviewlet when the context are portal tools.
  [tschanzt]
